[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Icons/window_close_white.png" type="Texture" id=1]
[ext_resource path="res://UI/Components/UIWindowButton.gd" type="Script" id=2]

[node name="UIWindowButton" type="Control"]
margin_right = 38.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 38 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
